src/objects/Glxy_Lease__c.object
<CustomObject>
    <customHelpPage>GLXY_HelpPage</customHelpPage>
    <description>This table contains lease information at the beginning of the fiscal year.  This information is updated at the beginning of each fiscal year.</description>
    <fields>
        <fullName>Antennas__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Antennas</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_IA__c</fullName>
        <description>Updated in R2.4; earlier formula - (CostPerSqFt__c * Total_IA_Sq_feet__c ) / 12</description>
        <formula>(BaseAnnualRent__c *  IAPercentage__c)/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APR IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apr_NOA__c</fullName>
        <description>Updated in R2.4; earlier formula -
( CostPerSqFt__c * IF(ParkingOnly__c = &quot;No&quot;, Total_NOA_Sq_feet__c, BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c ) )/12</description>
        <formula>(BaseAnnualRent__c *  NOAPercentage__c)/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APR NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUG IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Aug_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AUG NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BA53User__c</fullName>
        <description>BA53 analysts assigned to lease.</description>
        <label>BA53 Budget Analyst</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseAnnualRent__c</fullName>
        <inlineHelpText>Be sure to click save to adjust monthly impact.</inlineHelpText>
        <label>Base Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BaseLeaseEffectiveDate__c</fullName>
        <label>Lease Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BaseSquareFeet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Base Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseStructParkingSpacesRollup__c</fullName>
        <description>This field is used for Validation purposes of Base Structure Parking Spaces in Lease Agencies</description>
        <label>Base Structured Parking Spaces - Roll-up</label>
        <summarizedField>Glxy_LeaseAgencies__c.BaseStructuredParkingSpaces__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseAgencies__c.LeaseNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BaseStructuredParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Parking spaces available in a parking structure/garage.</description>
        <label>Base Structured Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BaseSurfParkingSpacesRollup__c</fullName>
        <description>This field is used for Validation purposes of Base Surface Parking Spaces in Lease Agencies</description>
        <label>Base Surface Parking Spaces - Roll-up</label>
        <summarizedField>Glxy_LeaseAgencies__c.BaseSurfaceParkingSpaces__c</summarizedField>
        <summaryForeignKey>Glxy_LeaseAgencies__c.LeaseNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BaseSurfaceParkingSpaces__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Parking spaces available in a parking lot.</description>
        <label>Base Surface Parking Spaces</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConstructProspectusIND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construct Prospectus Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConstructProspectusNO__c</fullName>
        <label>Construct Prospectus Number</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CostPerSqFt__c</fullName>
        <formula>BaseAnnualRent__c / IF(BaseSquareFeet__c &lt;&gt; 0, BaseSquareFeet__c ,if( ParkingOnly__c = &quot;Yes&quot; ,BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c ,1 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Per Sq Foot</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEC IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dec_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DEC NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DelegatedLease__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicator Box populated with a check if designated as a Delegated Lease in REXUS.</inlineHelpText>
        <label>Delegated Lease</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delegated_Lease_Rep_lkp__c</fullName>
        <formula>IF(DelegatedLease__c = true, &apos;True&apos;, &apos;False&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delegated Lease</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DigestID__c</fullName>
        <label>Digest ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpirationDateofLease__c</fullName>
        <description>Expiration Date</description>
        <label>Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FY_Obligation__c</fullName>
        <formula>BaseAnnualRent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FY Obligation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEB IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Feb_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FEB NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HoldoverExpirationDate__c</fullName>
        <description>Holdover Expiration Date</description>
        <label>Holdover Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HoldoverStatusInd__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Status, Yes or No  - The Government’s right to remain in the lease space after the expiration date of the current term without a contract in the event a mutual agreement to extend the lease term cannot be made and continued occupancy is required.</inlineHelpText>
        <label>Holdover Status Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IAConverstionDate__c</fullName>
        <inlineHelpText>The date upon which the fund type converts from IA Base to NOA Base</inlineHelpText>
        <label>IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IAConverstionFY__c</fullName>
        <formula>IF( 
ISBLANK(IAConverstionDate__c), 
&quot;2099&quot;, 
Text(YEAR(IAConverstionDate__c + 92))
)</formula>
        <label>IAConverstionFY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IAPercentage__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Percent of RSF/AR that is Indefinite Authority.</inlineHelpText>
        <label>IA Percentage</label>
        <precision>8</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IA_Cost_Per_Sq_Ft__c</fullName>
        <formula>If(

 ParkingOnly__c = &quot;Yes&quot;,

 (
      BLANKVALUE(Total_IA_Annual_Rent__c, 0)/
      (
        (BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c) 
              * 
        (If(IAPercentage__c = 0, 1, IAPercentage__c)) 
      )
 ),
 
 (
      BLANKVALUE(Total_IA_Annual_Rent__c, 0)/
     (If(Total_IA_Sq_feet__c  = 0, 1, Total_IA_Sq_feet__c))
 )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IA Cost Per Sq Foot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IncludeInterest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include Interest Indicator</description>
        <label>Include Interest Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsUserRegionMatch__c</fullName>
        <formula>IF(OR(TEXT(RegionCD__c)==$User.Glxy_Region_Code__c,$User.Glxy_Region_Code__c==&quot;CO&quot;), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IsUserRegionMatch</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jan_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAN IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jan_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JAN NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JUL IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jul_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JUL NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JUN IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jun_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JUN NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LandOnly__c</fullName>
        <formula>If(
    (
       BaseStructuredParkingSpaces__c == 0 &amp;&amp;
       BaseSurfaceParkingSpaces__c == 0 &amp;&amp;   
       BaseSquareFeet__c == 0 &amp;&amp;
       Antennas__c == 0
    ),
True,
False
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Land Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeaseExpirationDateFY__c</fullName>
        <formula>Text(YEAR(  ExpirationDateofLease__c + 92 ))</formula>
        <label>Lease Expiration Date FY</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeaseID__c</fullName>
        <externalId>true</externalId>
        <label>Lease ID</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mar_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAR IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mar_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAR NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAY IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>May_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAY NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MonthlyRent__c</fullName>
        <formula>BaseAnnualRent__c/12</formula>
        <label>Monthly Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NOAPercentage__c</fullName>
        <formula>1 - IAPercentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percent of RSF/AR that is New Obligational Authority.</inlineHelpText>
        <label>NOA Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NOA_Rate_Per_Sq_Ft__c</fullName>
        <formula>If(

 ParkingOnly__c = &quot;Yes&quot;,

 (
     BLANKVALUE(Total_NOA_Annual_Rent__c, 0)/
     (  (BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c)  
               *         
        (If(NOAPercentage__c = 0, 1, NOAPercentage__c))   
     )
 ),
 
 (
      BLANKVALUE(Total_NOA_Annual_Rent__c, 0)/
     (If(Total_NOA_Sq_feet__c  = 0, 1, Total_NOA_Sq_feet__c))
 )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOA Cost Per Sq Foot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NewLeaseConstructIND__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Lease Construct Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_FY_Leases__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Flag to identify the leases that are not included in base.</inlineHelpText>
        <label>Next FY Leases</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nov_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOV IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Nov_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NOV NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NumberofChildCPIs__c</fullName>
        <description>Report - Leases with more than 1 CPI - This field will help us determine if a particular lease has more than one associated CPI.</description>
        <label>Number of CPI records</label>
        <summaryForeignKey>Glxy_ConsumerPriceIndex__c.LeaseNumber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Oct_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCT IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oct_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OCT NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ParkingOnly__c</fullName>
        <formula>IF(AND( BaseSquareFeet__c = 0, BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c &lt;&gt; 0),&quot;Yes&quot;,&quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parking-Only</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>R620Link2__c</fullName>
        <label>R620Link2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>R620Link__c</fullName>
        <label>R620Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>REXUSAnnualRent__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus Annual Rent</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSIANOAConversionDate__c</fullName>
        <label>REXUS IA/NOA Conversion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REXUSIASq_ft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus IA Sq ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSLeaseExpirationDate__c</fullName>
        <label>Rexus Lease Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REXUSNOASqft__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus NOA Sq ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUSR620__c</fullName>
        <formula>HYPERLINK(&quot;https://&quot;&amp;(RIGHT( R620Link__c,(LEN(R620Link__c)-FIND(&quot;://&quot;,R620Link__c)-2))&amp; R620Link2__c ),&quot;Click here for R620&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Most Recent Digest Action in PDF Format uploaded in REXUS.</inlineHelpText>
        <label>Latest R620</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REXUSStatusCode__c</fullName>
        <label>Rexus Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>REXUSTotalSqFt__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Rexus Total Sq Ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUS_Cost_Per_Sq_Foot__c</fullName>
        <formula>REXUSAnnualRent__c / IF(REXUSTotalSqFt__c  &lt;&gt; 0, REXUSTotalSqFt__c ,if( ParkingOnly__c = &quot;Yes&quot; ,BaseStructuredParkingSpaces__c + BaseSurfaceParkingSpaces__c ,1 ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS Cost Per Sq Foot</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>REXUS_IA_Annual_Rent__c</fullName>
        <formula>REXUS_Cost_Per_Sq_Foot__c *  REXUSIASq_ft__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS IA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REXUS_NOA_Annual_Rent__c</fullName>
        <formula>if( ParkingOnly__c = &quot;Yes&quot; ,  REXUSAnnualRent__c, ( REXUS_Cost_Per_Sq_Foot__c *  REXUSNOASqft__c) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>REXUS NOA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RealtySpecialist__c</fullName>
        <label>Realty Specialist Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegionCD__c</fullName>
        <description>Region Code</description>
        <label>Region Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sep_IA__c</fullName>
        <formula>Apr_IA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEP IA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sep_NOA__c</fullName>
        <formula>Apr_NOA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SEP NOA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StatusCode__c</fullName>
        <description>Status Code</description>
        <inlineHelpText>Current status of during G2 Base Sertting period. Options are Active, Terminated, Pending.
DL	Deleted
PD	Pending
TM	Terminated
AC	Active</inlineHelpText>
        <label>Status Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SuspendInd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Suspend Indicator</description>
        <label>Suspend Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax__c</fullName>
        <description>rollup of Tax data from Lumpsums by lease</description>
        <label>Tax</label>
        <summarizedField>Glxy_LumpSum__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Glxy_LumpSum__c.LumSumType__c</field>
            <operation>equals</operation>
            <value>Tax Escalation</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Glxy_LumpSum__c.StatusCd__c</field>
            <operation>equals</operation>
            <value>Actual</value>
        </summaryFilterItems>
        <summaryForeignKey>Glxy_LumpSum__c.LeaseNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TeamCode__c</fullName>
        <label>Team Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TerminationDateofLease__c</fullName>
        <description>Termination  Date</description>
        <label>Lease Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_IA_Annual_Rent__c</fullName>
        <description>Updated in R2.4; previous formula was - (CostPerSqFt__c * Total_IA_Sq_feet__c)</description>
        <formula>(BaseAnnualRent__c * IAPercentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total IA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_IA_Sq_feet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total IA Sq ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_NOA_Annual_Rent__c</fullName>
        <description>Updated in R2.4; Previous formula - 
if( ParkingOnly__c = &quot;Yes&quot; , BaseAnnualRent__c, (CostPerSqFt__c * Total_NOA_Sq_feet__c) )</description>
        <formula>(BaseAnnualRent__c * NOAPercentage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total NOA Annual Rent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_NOA_Sq_feet__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total NOA Sq ft</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TriggerUpdateField__c</fullName>
        <description>This is a dummy field that we will use to fire the trigger on this (parent) object when a child (e.g. Lease Agency) record is updated.</description>
        <label>Trigger Update Field</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UrgentInd__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Urgent Indicator</description>
        <label>Urgent Indicator</label>
        <type>Checkbox</type>
    </fields>
    <label>Lease</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RegionCD__c</columns>
        <columns>BaseLeaseEffectiveDate__c</columns>
        <columns>BaseAnnualRent__c</columns>
        <columns>Total_NOA_Annual_Rent__c</columns>
        <columns>Total_IA_Annual_Rent__c</columns>
        <columns>TeamCode__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Region_s_Leases</fullName>
        <columns>NAME</columns>
        <columns>RegionCD__c</columns>
        <columns>BaseLeaseEffectiveDate__c</columns>
        <columns>BaseAnnualRent__c</columns>
        <columns>Total_NOA_Annual_Rent__c</columns>
        <columns>Total_IA_Annual_Rent__c</columns>
        <columns>TeamCode__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsUserRegionMatch__c</field>
            <operation>equals</operation>
            <value>TRUE</value>
        </filters>
        <label>My Region&apos;s Leases</label>
    </listViews>
    <nameField>
        <label>Lease Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Leases</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Change_in_Lease_Number</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
        <errorMessage>Lease cannot be Changed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>IAConversionDateCheck</fullName>
        <active>true</active>
        <description>Checks if IA Conversion Date is less than Effective date, and throws error.</description>
        <errorConditionFormula>IAConverstionDate__c &lt; BaseLeaseEffectiveDate__c</errorConditionFormula>
        <errorMessage>IA Conversion Date cannot be less than Lease Effective Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SumOfNOAandIA</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(Total_IA_Sq_feet__c &lt;&gt; 0, BaseSquareFeet__c &lt;&gt; 0), (Total_IA_Sq_feet__c &gt; BaseSquareFeet__c), FALSE)</errorConditionFormula>
        <errorMessage>Total IA Sq. Ft. cannot exceed the Base Sq Ft of the Lease.</errorMessage>
    </validationRules>
</CustomObject>